Updated spring version to be automatically detected, and javax, jakarta as well